[package]
name = "saddle-vehicle-flight"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-vehicle-flight"
license = "MIT-0"
description = "Reusable aircraft flight toolkit for Bevy covering fixed-wing and helicopter flight"

[dependencies]
bevy = "0.18"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
