[workspace]
members = [
    "support",
    "basic_fixed_wing",
    "helicopter_hover",
    "stall_recovery",
    "wind_gusts",
    "instruments",
    "control_profiles",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18" }
bevy_enhanced_input = "0.24"
saddle-vehicle-flight = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
