[workspace]
members = [
    "support",
    "basic_fixed_wing",
    "helicopter_hover",
    "cockpit_vtol",
    "stall_recovery",
    "wind_gusts",
    "instruments",
    "control_profiles",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18" }
bevy_flair = "0.7"
bevy_enhanced_input = "0.24"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }
saddle-vehicle-flight = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
