[package]
name = "saddle-vehicle-flight-example-stall-recovery"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-vehicle-flight = { workspace = true }
saddle-vehicle-flight-example-support = { path = "../support" }
saddle-pane = { workspace = true }

[lints]
workspace = true
