[package]
name = "saddle-vehicle-flight-example-support"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
bevy_flair = { workspace = true }
bevy_enhanced_input = { workspace = true }
bevy_input_focus = { workspace = true }
saddle-pane = { workspace = true }
saddle-vehicle-flight = { workspace = true }
bevy_ui_widgets = { workspace = true }

[lints]
workspace = true
